--- a/UniFiler10/App.xaml
+++ b/UniFiler10/App.xaml
@@ -27,6 +27,7 @@
             <conv:TextEmptyToCollapsedConverter x:Key="TextEmptyToCollapsedConverter"/>
             <conv:TextEmptyToVisibleConverter x:Key="TextEmptyToVisibleConverter"/>
             <conv:IListNotEmptyToVisible x:Key="IListNotEmptyToVisible"/>
+			<conv:StringFormatterConverter x:Key="StringFormatterConverter"/>
 			<vms:BooleanAndElevated x:Key="BooleanAndElevated"/>
 			<vms:BooleanAndElevatedToVisible x:Key="BooleanAndElevatedToVisible"/>
 		</ResourceDictionary>
