--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
 	xmlns:ctl="using:UniFiler10.Controlz"
+	xmlns:views="using:UniFiler10.Views"
 	xmlns:utilz="using:Utilz"
 	xmlns:vm="using:UniFiler10.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -17,6 +18,11 @@
 		  Background="AntiqueWhite"
 		  d:DataContext="{d:DesignInstance vm:SettingsVM, CreateList=True, IsDesignTimeCreatable=True}"
 		  DataContext="{x:Bind VM, Mode=OneWay}">
+		<FlyoutBase.AttachedFlyout>
+			<Flyout Placement="Full" x:Name="AboutFlyout">
+				<views:AboutPanel/>
+			</Flyout>
+		</FlyoutBase.AttachedFlyout>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
@@ -159,6 +165,28 @@
 				</Grid>
 			</Button>
 
+			<Button
+				Tapped="OnAbout_Tapped"
+				Style="{StaticResource ButtonLolloStyle}">
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="{StaticResource LandscapeItemHeight_ForGrid}"/>
+						<ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
+						<ColumnDefinition Width="{StaticResource LandscapeItemWidth_ForGrid}"/>
+					</Grid.ColumnDefinitions>
+
+					<SymbolIcon Symbol="Help"
+						HorizontalAlignment="Center"
+						VerticalAlignment="Center"
+						Width="{StaticResource LandscapeItemHeight}"
+						Height="{StaticResource LandscapeItemHeight}"/>
+					<TextBlock Grid.Column="2" x:Uid="About"
+						MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
+                        TextWrapping="Wrap"
+                        HorizontalAlignment="Left"
+						VerticalAlignment="Center"/>
+				</Grid>
+			</Button>
 		</VariableSizedWrapGrid>
 
 		<Border Grid.Row="1"
