--- a/UniFiler10/Views/BriefcaseCoverView.xaml
+++ b/UniFiler10/Views/BriefcaseCoverView.xaml
@@ -16,7 +16,7 @@
 	<UserControl.Resources>
 		<Storyboard x:Name="UpdatingStoryboard" RepeatBehavior="Forever" >
 			<ObjectAnimationUsingKeyFrames 
-                Storyboard.TargetName="RefreshIcon" 
+                Storyboard.TargetName="RefreshVB" 
                 Storyboard.TargetProperty="Visibility">
 				<DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="Visible"/>
 			</ObjectAnimationUsingKeyFrames>
@@ -28,6 +28,62 @@
 				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="90"/>
 				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="180"/>
 				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="270"/>
+			</DoubleAnimationUsingKeyFrames>
+		</Storyboard>
+
+		<Storyboard x:Name="SuccessStoryboard">
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
+                Storyboard.TargetName="SuccessIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
+                Storyboard.TargetName="SuccessIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+		</Storyboard>
+
+		<Storyboard x:Name="FailureStoryboard">
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
+                Storyboard.TargetName="FailureIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
+                Storyboard.TargetName="FailureIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
 			</DoubleAnimationUsingKeyFrames>
 		</Storyboard>
 	</UserControl.Resources>
@@ -45,22 +101,62 @@
 			</Grid.RowDefinitions>
 
 			<!-- animation for refresh -->
-			<Viewbox
-                Width="{StaticResource LandscapeItemHeight}"
-                Height="{StaticResource LandscapeItemHeight}"
+			<Viewbox x:Name="RefreshVB"
+                Width="{StaticResource LandscapeItemWidth}"
+                Height="{StaticResource LandscapeItemWidth}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Stretch="Uniform">
+                Stretch="Uniform"
+				Visibility="Collapsed">
 				<SymbolIcon x:Name="RefreshIcon" 
                             Symbol="Sync"
-                            RenderTransformOrigin=".5, .5" 
-                            Visibility="Collapsed"
+                            RenderTransformOrigin=".5, .5"
                             Foreground="{StaticResource DiagonalNESWBrush}"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             Margin="{StaticResource ButtonPadding}">
 					<SymbolIcon.RenderTransform>
-						<CompositeTransform Rotation="0"/>
+						<CompositeTransform Rotation="0" ScaleX="1" ScaleY="1"/>
+					</SymbolIcon.RenderTransform>
+				</SymbolIcon>
+			</Viewbox>
+
+			<!-- animation for success -->
+			<Viewbox
+                Width="{StaticResource LandscapeItemWidth}"
+                Height="{StaticResource LandscapeItemWidth}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Stretch="Uniform">
+				<SymbolIcon x:Name="SuccessIcon" 
+                            Symbol="Emoji2"
+                            RenderTransformOrigin=".5, .5"
+                            Foreground="{StaticResource DiagonalNESWBrush}"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Margin="{StaticResource ButtonPadding}">
+					<SymbolIcon.RenderTransform>
+						<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
+					</SymbolIcon.RenderTransform>
+				</SymbolIcon>
+			</Viewbox>
+
+			<!-- animation for failure -->
+			<Viewbox
+                Width="{StaticResource LandscapeItemWidth}"
+                Height="{StaticResource LandscapeItemWidth}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Stretch="Uniform">
+				<SymbolIcon x:Name="FailureIcon" 
+                            Symbol="Dislike"
+                            RenderTransformOrigin=".5, .5"
+                            Foreground="{StaticResource DiagonalNESWBrush}"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Margin="{StaticResource ButtonPadding}">
+					<SymbolIcon.RenderTransform>
+						<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
 					</SymbolIcon.RenderTransform>
 				</SymbolIcon>
 			</Viewbox>
