--- a/UniFiler10/Views/BinderCoverView.xaml
+++ b/UniFiler10/Views/BinderCoverView.xaml
@@ -31,6 +31,62 @@
 				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="270"/>
 			</DoubleAnimationUsingKeyFrames>
 		</Storyboard>
+
+		<Storyboard x:Name="SuccessStoryboard">
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
+                Storyboard.TargetName="SuccessIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
+                Storyboard.TargetName="SuccessIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+		</Storyboard>
+
+		<Storyboard x:Name="FailureStoryboard">
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
+                Storyboard.TargetName="FailureIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+
+			<DoubleAnimationUsingKeyFrames 
+                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
+                Storyboard.TargetName="FailureIcon">
+				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
+				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
+			</DoubleAnimationUsingKeyFrames>
+		</Storyboard>
 	</ctl:OpenableObservableControl.Resources>
 
 	<ScrollViewer>
@@ -63,6 +119,46 @@
 				</SymbolIcon>
 			</Viewbox>
 
+			<!-- animation for success -->
+			<Viewbox
+                Width="{StaticResource LandscapeItemWidth}"
+                Height="{StaticResource LandscapeItemWidth}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Stretch="Uniform">
+				<SymbolIcon x:Name="SuccessIcon" 
+                            Symbol="Emoji2"
+                            RenderTransformOrigin=".5, .5"
+                            Foreground="{StaticResource DiagonalNESWBrush}"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Margin="{StaticResource ButtonPadding}">
+					<SymbolIcon.RenderTransform>
+						<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
+					</SymbolIcon.RenderTransform>
+				</SymbolIcon>
+			</Viewbox>
+
+			<!-- animation for failure -->
+			<Viewbox
+                Width="{StaticResource LandscapeItemWidth}"
+                Height="{StaticResource LandscapeItemWidth}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Stretch="Uniform">
+				<SymbolIcon x:Name="FailureIcon" 
+                            Symbol="Dislike"
+                            RenderTransformOrigin=".5, .5"
+                            Foreground="{StaticResource DiagonalNESWBrush}"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Margin="{StaticResource ButtonPadding}">
+					<SymbolIcon.RenderTransform>
+						<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
+					</SymbolIcon.RenderTransform>
+				</SymbolIcon>
+			</Viewbox>
+			
 			<!-- actions for all folders -->
 			<VariableSizedWrapGrid Grid.Row="0"
                 Orientation="Horizontal"
