--- a/UniFiler10/Views/AudioRecorderView.xaml
+++ b/UniFiler10/Views/AudioRecorderView.xaml
@@ -12,8 +12,13 @@
     d:DesignWidth="500">
 
 	<UserControl.Resources>
-		<SolidColorBrush x:Key="TranslucentBlackBrush" Color="Black" Opacity="0.3"/>
+		<!--<SolidColorBrush x:Key="TranslucentBlackBrush" Color="Black" Opacity="0.3"/>-->
+		
 		<Storyboard x:Name="RecordingStoryboard" RepeatBehavior="Forever">
+			<DoubleAnimation Duration="0:0:0.0" 
+				To="0"
+				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.Rotation)" 
+				Storyboard.TargetName="viewbox"/>
 			<DoubleAnimation Duration="0:0:0.2" 
 				From="1" To=".8" 
 				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
@@ -22,9 +27,20 @@
 				From="1" To=".8" 
 				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" 
 				Storyboard.TargetName="viewbox"/>
+		</Storyboard>
+		
+		<Storyboard x:Name="FailureStoryboard" RepeatBehavior="Forever">
+			<DoubleAnimation Duration="0:0:0.0" 
+				To="180" 
+				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.Rotation)" 
+				Storyboard.TargetName="viewbox"/>
 			<!--<DoubleAnimation Duration="0:0:0.2" 
 				From="1" To=".8" 
-				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" 
+				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
+				Storyboard.TargetName="viewbox"/>
+			<DoubleAnimation Duration="0:0:0.2" 
+				From="1" To=".8" 
+				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" 
 				Storyboard.TargetName="viewbox"/>-->
 		</Storyboard>
 	</UserControl.Resources>
