--- a/UniFiler10/Views/CameraView.xaml
+++ b/UniFiler10/Views/CameraView.xaml
@@ -21,7 +21,8 @@
         <CaptureElement Name="PreviewControl" Stretch="Uniform"/>
 
         <!-- Capture + Record buttons -->
-        <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center">
+		<StackPanel Background="Gold"
+			HorizontalAlignment="Right" VerticalAlignment="Center">
             <Button Name="PhotoButton" 
 				Tapped="OnPhotoButton_Tapped" 
 				IsEnabled="False"
@@ -57,7 +58,7 @@
             </Button>
         </StackPanel>
 
-        <Border VerticalAlignment="Bottom">
+        <Border VerticalAlignment="Bottom" Background="Gold">
             <TextBlock Text="{Binding ElementName=me, Path=LastMessage}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Border>
     </Grid>
